--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -6,29 +6,39 @@
 </head>
 <body>
 <main layout:fragment="content">
-<div class="container d-flex justify-content-center" id="main">
-   <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-default content-main">
-          <h2 class="text-center">회원가입</h2>
-          <form action="/users" method="post" >
-              <div class="form-group">
-                  <label for="userId">아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="아이디를 입력하세요">
-              </div>
-              <div class="form-group">
-                  <label for="name">닉네임</label>
-                  <input class="form-control" id="name" name="name" placeholder="닉네임을 입력하세요">
-              </div>
-              <div class="form-group">
-                  <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요">
-              </div>
-              <button type="submit" class="btn btn-primary clearfix center-block">회원가입</button>
-              <div class="clearfix" />
-          </form>
+    <div class="container py-5" id="main">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="card shadow-sm border-0 rounded-3">
+                    <div class="card-header bg-primary text-white py-3">
+                        <h2 class="text-center mb-0 fw-bold">회원가입</h2>
+                    </div>
+                    <div class="card-body p-4">
+                        <form method="post" action="/users">
+                            <div class="mb-4">
+                                <label for="userId" class="form-label fw-bold">아이디</label>
+                                <input type="text" class="form-control form-control-lg" id="userId" name="userId" placeholder="아이디를 입력하세요">
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="name" class="form-label fw-bold">닉네임</label>
+                                <input type="text" class="form-control form-control-lg" id="name" name="name" placeholder="닉네임을 입력하세요">
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="password" class="form-label fw-bold">비밀번호</label>
+                                <input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="비밀번호를 입력하세요">
+                            </div>
+
+                            <div class="d-grid gap-2 d-flex justify-content-center mt-4">
+                                <button type="submit" class="btn btn-lg btn-primary px-5 py-3">등록하기</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </main>
 </body>
 </html>
