--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,19 +7,38 @@
 </head>
 <body>
 <main layout:fragment="content">
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img class="img-fluid rounded-start" src="../images/80-text.png">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h4 class="card-title" th:text="${user.name}"></h4>
-                    <p class="card-text" th:text="${user.userId}"></p>
+    <section class="vh-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-start h-100">
+                <div class="col col-md-9 col-lg-7 col-xl-5">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-4">
+                            <div class="d-flex text-black">
+                                <div class="flex-shrink-0">
+                                    <img src="https://avatars.githubusercontent.com/u/143267143?s=400&u=e287ff8fe8caae73600095faf3e7002d44219585&v=4" alt="Generic placeholder image" class="img-fluid" style="width: 180px; border-radius: 10px;">
+                                </div>
+                                <div class="flex-grow-1 ms-3">
+                                    <h5 class="mb-1" th:text="${user.name}"></h5>
+                                    <p class="mb-2 pb-1" style="color: #2b2a2a;" th:text="${user.userId}"></p>
+                                    <div class="d-flex justify-content-start rounded-3 p-2 mb-2" style="background-color: #efefef;">
+                                        <div>
+                                            <p class="small text-muted mb-1">소개</p>
+                                            <p class="mb-0">안녕하세요.</p>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex pt-1">
+                                        <button type="button" class="btn btn-primary flex-grow-1">수정</button>
+                                        <button type="button" class="btn btn-outline-primary me-1 flex-grow-1">탈퇴</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
 </main>
 </body>
 </html>
