--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -17,6 +17,13 @@
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
+    <div th:if="${deleteError}" class="alert alert-danger" role="alert">
+        <span th:text="${deleteError}"></span>
+    </div>
+
+    <div th:if="${loginError}" class="alert alert-warning" role="alert">
+        <span th:text="${loginError}"></span>
+    </div>
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
           <header class="qna-header">
@@ -42,16 +49,18 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a th:if="${loginUser != null and loginUser.id == board.writerId}"
+                                 th:href="@{/boards/{id}/revise(id=${board.id})}"
+                                 class="link-modify-article">수정</a>
                           </li>
-                          <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
-                                  <input type="hidden" name="_method" value="DELETE">
+                          <li th:if="${loginUser != null and loginUser.id == board.writerId}">
+                              <form class="form-delete" th:action="@{/boards/{id}(id=${board.id})}" method="post" onsubmit="return confirm('정말 삭제하시겠습니까?');">
+                                  <input type="hidden" name="_method" value="delete">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
                           </li>
                           <li>
-                              <a class="link-modify-article" href="/templates/user/index.html">목록</a>
+                              <a class="link-modify-article" href="/">목록</a>
                           </li>
                       </ul>
                   </div>
@@ -79,9 +88,11 @@
                               </div>
                               <div class="article-util">
                                   <ul class="article-util-list">
-                                      <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                      </li>
+<!--                                      <li>-->
+<!--                                          <a th:if="${session.loginUser != null and session.loginUser.id == user.id}"-->
+<!--                                             th:href="@{/users/{id}/revise(id=${user.id})}"-->
+<!--                                             class="link-modify-article">수정</a>-->
+<!--                                      </li>-->
                                       <li>
                                           <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
                                               <input type="hidden" name="_method" value="DELETE">
