--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -20,13 +20,17 @@
                         <div th:if="${param.error}" class="alert alert-danger" role="alert">
                             <span th:if="${param.error == 'wrong-password'}">현재 비밀번호가 일치하지 않습니다.</span>
                         </div>
+
+                        <div th:if="${param.error == 'unauthorized'}">
+                            권한이 없습니다.
+                        </div>
                         
                         <form th:action="@{/users/{id}(id=${user.id})}" method="post" th:object="${user}">
                             <input type="hidden" name="_method" value="PUT" />
                             
                             <div class="mb-3">
-                                <label for="id" class="form-label">아이디</label>
-                                <input type="text" class="form-control" id="id" th:value="*{id}" readonly>
+                                <label for="userId" class="form-label">아이디</label>
+                                <input type="text" class="form-control" id="userId" th:value="*{userId}" readonly>
                             </div>
 
                             <div class="mb-3">
